--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -885,6 +885,19 @@
   url       = {https://kb.osu.edu/handle/1811/59113},
 }
 
+@Article{Alexander2012,
+  author    = {Alexander, S.},
+  title     = {Joyce's Census: Character, Demography, and the Problem of Population in ``Ulysses''},
+  journal   = {NOVEL: A Forum on Fiction},
+  year      = {2012},
+  volume    = {45},
+  number    = {3},
+  pages     = {433-454},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://www.jstor.org/stable/41810124},
+}
+
 @Article{Alexander2019,
   author    = {Alexander, S.},
   title     = {Social Network Analysis and the Scale of Modernist Fiction},
@@ -1684,6 +1697,16 @@
   doi       = {10.1002/9781118607251.ch20},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Book{Armstrong2018,
+  title     = {Novels in the Time of Democratic Writing: The American Example},
+  publisher = {University of Pennsylvania Press},
+  year      = {2018},
+  author    = {Armstrong, N. and Tennenhouse, L.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://www.upenn.edu/pennpress/book/15719.html},
 }
 
 @PhdThesis{Arnold2015,
@@ -3194,6 +3217,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.01},
   url       = {https://trove.nla.gov.au/work/14406850?q&versionId=25605039},
+}
+
+@Book{Benstock1980,
+  title     = {Who's He When He's at Home? A James Joyce Directory},
+  publisher = {University of Illinois Press},
+  year      = {1980},
+  author    = {Benstock, S. and Benstock, B.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Who_s_He_when_He_s_at_Home.html?id=U3krAQAAMAAJ},
 }
 
 @Article{Bentz2014,
@@ -6468,6 +6501,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.18653/v1/d18-2029},
   owner     = {Vincent},
   timestamp = {2020.03.24},
+}
+
+@Article{Chaddha2011,
+  author    = {Chaddha, A. and Wilson, W. J.},
+  title     = {`Way Down in the Hole': Systemic Urban Inequality and The Wire},
+  journal   = {Critical Inquiry},
+  year      = {2011},
+  volume    = {38},
+  number    = {1},
+  pages     = {164-188},
+  doi       = {10.1086/661647},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @TechReport{Chaganty2015,
@@ -10945,6 +10991,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.questia.com/library/117508702/appearing-to-diminish-female-development-and-the},
 }
 
+@Book{Ellman1982,
+  title     = {James Joyce},
+  publisher = {Oxford University Press},
+  year      = {1982},
+  author    = {Ellman, R.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/James_Joyce.html?id=KckdAQAAIAAJ},
+}
+
 @Article{Ellouze2010,
   author    = {Ellouze, M. and Boujemaa, N. and Alimi, A. M.},
   title     = {{IM(S)2}: Interactive movie summarization system},
@@ -11089,6 +11145,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1086/231209},
   owner     = {Vincent},
   timestamp = {2021.09.16},
+}
+
+@Book{Empson1974,
+  title     = {Some Versions of Pastoral},
+  publisher = {New Directions},
+  year      = {1974},
+  author    = {Empson, W.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://global.oup.com/academic/product/william-empson-some-versions-of-pastoral-9780199659661},
 }
 
 @Article{Endert2012,
@@ -12610,6 +12676,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.22},
 }
 
+@Book{Foucault2003,
+  title     = {Society Must Be Defended: Lectures at the Collège de France, 1975-1976},
+  publisher = {Picador},
+  year      = {2003},
+  author    = {Foucault, M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Society_Must_Be_Defended.html?id=3mRWbdxo9JMC},
+}
+
 @Book{Fowler1982,
   title     = {Kinds of Literature: An Introduction to the Theory of Genres and Modes},
   publisher = {Clarendon Press},
@@ -13096,6 +13172,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.12.01},
 }
 
+@InCollection{Gallagher2006,
+  author    = {Gallagher, C.},
+  title     = {The Rise of Fictionality},
+  booktitle = {The Novel},
+  publisher = {Princeton University Press},
+  year      = {2006},
+  volume    = {1},
+  pages     = {336-363},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {http://assets.press.princeton.edu/chapters/si17_8150.pdf},
+}
+
 @Book{Gallaway1950,
   title     = {Constructing a Play},
   publisher = {Prentice-Hall},
@@ -13207,6 +13296,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://books.google.fr/books/about/Early_Irish_Myths_and_Sagas.html?id=PBTTE6KtOHUC&redir_esc=y},
+}
+
+@InCollection{Ganz2016,
+  author    = {Ganz, A.},
+  title     = {`It's All in the Game': Greek Myth and The Wire},
+  booktitle = {Ancient Greek Myth in World Fiction since 1989},
+  publisher = {Bloomsbury Academic},
+  year      = {2016},
+  pages     = {105-122},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://pure.royalholloway.ac.uk/portal/en/publications/its-all-in-the-game-greek-myth-violence-and-the-wire(be2870e6-230c-4555-9aba-a2f1cfb3d922).html},
 }
 
 @Article{Gao2005,
@@ -13662,6 +13763,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.13},
 }
 
+@Book{Gifford1988,
+  title     = {``Ulysses'' Annotated: Notes for James Joyce's ``Ulysses''},
+  publisher = {University of California Press},
+  year      = {1988},
+  author    = {Gifford, D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Ulysses_Annotated.html?id=cjnvQwAACAAJ},
+}
+
 @Article{Gil2018,
   author    = {Gil, M. A. and Hein, A. M. and Spiegel, O. and Baskett, M. L. and Sih, A.},
   title     = {Social Information Links Individual Behavior to Population and Community Dynamics},
@@ -13673,6 +13784,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.tree.2018.04.010},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Book{Gilbert1955,
+  title     = {James Joyce's ``Ulysses'': A Study},
+  publisher = {Vintage},
+  year      = {1955},
+  author    = {Gilbert, S.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/James_Joyce_s_Ulysses.html?id=kP0IAQAAIAAJ},
 }
 
 @Article{Gildea2002,
@@ -14679,6 +14800,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi         = {10.5281/zenodo.259499.},
   owner       = {Vincent},
   timestamp   = {2017.12.02},
+}
+
+@Article{Grener2019,
+  author    = {Grener, A. and Parker, I.},
+  title     = {Dickens's Anonymous Margins: Names, Network Theory, and the Serial Novel},
+  journal   = {Dickens Studies Annual},
+  year      = {2019},
+  volume    = {50},
+  number    = {1},
+  pages     = {20},
+  doi       = {10.5325/dickstudannu.50.1.0020},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @Article{Greteman2015,
@@ -17845,6 +17979,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://trove.nla.gov.au/work/36452101},
 }
 
+@Article{Jameson2010a,
+  author    = {Jameson, F.},
+  title     = {Realism and Utopia in The Wire},
+  journal   = {Criticism},
+  year      = {2010},
+  volume    = {52},
+  number    = {3-4},
+  pages     = {359-372},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://muse.jhu.edu/article/447304},
+}
+
 @InProceedings{Jancarik2015,
   author    = {Jancarík, A. and Novotna, J.},
   title     = {Mathematics and theatre activities},
@@ -18436,6 +18583,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.07.02},
 }
 
+@InCollection{Joyce2000,
+  author    = {Joyce, J.},
+  title     = {The Centenary of Charles Dickens},
+  booktitle = {Occasional, Critical, and Political Writing},
+  publisher = {Oxford University Press},
+  year      = {2000},
+  pages     = {183-186},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Occasional_Critical_and_Political_Writin.html?id=vdhWenAcwCUC},
+}
+
 @InProceedings{Jung2004,
   author    = {Jung, B. and Kwak, T. and Song, J. and Lee, Y.},
   title     = {Narrative abstraction model for story-oriented video},
@@ -18691,6 +18850,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1057/s41599-020-0436-1},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@Book{Kain1947,
+  title     = {Fabulous Voyager: James Joyce's ``Ulysses''},
+  publisher = {University of Chicago Press},
+  year      = {1947},
+  author    = {Kain, R. M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Fabulous_Voyager.html?id=oQDJwAEACAAJ},
 }
 
 @InProceedings{Kairam2012,
@@ -19029,6 +19198,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.tics.2010.02.005},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InCollection{Kelly2002,
+  author    = {Kelly, J. P.},
+  title     = {Murder Your Darlings: A Scientific Response to The Voice of Evidence in Reading Research},
+  booktitle = {The Complete Handbook of Novel Writing: Everything You Need to Know about Creating and Selling Your Work},
+  publisher = {Writer’s Digest Books},
+  year      = {2002},
+  pages     = {215-219},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://ur.booksc.eu/book/39984673/1bfd88},
 }
 
 @TechReport{Kelsall2004,
@@ -22109,6 +22290,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.hup.harvard.edu/catalog.php?isbn=9780674424869},
 }
 
+@Book{Levin1971,
+  title     = {The Multiple Plot in English Renaissance Drama},
+  publisher = {University of Chicago Press},
+  year      = {1971},
+  author    = {Levin, R.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://www.journals.uchicago.edu/doi/abs/10.1086/rd.5.41917100},
+}
+
 @Book{Levin1993,
   title     = {English verb classes and alternations: A preliminary investigation},
   publisher = {University of Chicago Press},
@@ -22219,6 +22410,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://archive.org/details/LEWINKurt.PrinciplesOfTopologicalPsychology_201605},
+}
+
+@Book{Lewis2000,
+  title     = {Modernism, Nationalism, and the Novel},
+  publisher = {Cambridge University Press},
+  year      = {2000},
+  author    = {Lewis, P.},
+  doi       = {10.1017/CBO9780511485145},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @Article{Lewis2011,
@@ -23917,6 +24118,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.johnsbookshop.com/products/navan-fort-archaeology-and-myth-armagh/},
 }
 
+@Book{Lyon2008,
+  title     = {Manuscript Makeover: Revision Techniques No Fiction Writer Can Afford to Ignore},
+  publisher = {Penguin},
+  year      = {2008},
+  author    = {Lyon, E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Manuscript_Makeover.html?id=py2yTK1hodYC},
+}
+
 @Article{Lyons2005,
   author    = {Lyons, J. D.},
   title     = {Mlle de Chartres at the Jeweller's Shop: Knowledge and Commerce in La Princesse de Clèves},
@@ -24130,6 +24341,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://rowman.com/ISBN/9780847682546/Talking-Trojan-Speech-and-Community-in-the-Iliad},
+}
+
+@Book{Maddox1978,
+  title     = {Joyce's ``Ulysses'' and the Assault upon Character},
+  publisher = {Rutgers University Press},
+  year      = {1978},
+  author    = {Maddox, J. H.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Joyce_s_Ulysses_and_the_Assault_Upon_Cha.html?id=jUO8AAAAIAAJ},
 }
 
 @InProceedings{Mademlis2016,
@@ -25121,6 +25342,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.persee.fr/doc/roman_0048-8593_1973_num_3_6_4957},
 }
 
+@Book{Mayr1976,
+  title     = {Evolution and the Diversity of Life: Selected Essays},
+  publisher = {Harvard University Press},
+  year      = {1976},
+  author    = {Mayr, E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Evolution_and_the_Diversity_of_Life.html?id=uJS79Za7WZ0C},
+}
+
 @Article{Mazanec2018,
   author    = {Mazanec, T. J.},
   title     = {Networks of Exchange Poetry in Late Medieval China: Notes toward a Dynamic History of Tang Literature},
@@ -25279,6 +25510,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.semanticscholar.org/paper/Authoring-Game-based-Interactive-Narrative-using-il-McCoy-Treanor/37d116d50af56473b58c0c79a7ea6276cb142680},
+}
+
+@Book{McCrea2011,
+  title     = {In the Company of Strangers: Family and Narrative in Dickens, Conan Doyle, Joyce, and Proust},
+  publisher = {Columbia University Press},
+  year      = {2011},
+  author    = {McCrea, B.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {http://cup.columbia.edu/book/in-the-company-of-strangers/9780231157629},
 }
 
 @TechReport{McCulloh2008,
@@ -25509,6 +25750,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/1468077042000309937},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@Book{McWeeny2016,
+  title     = {The Comfort of Strangers: Social Life and Literary Form},
+  publisher = {Oxford University Press},
+  year      = {2016},
+  author    = {McWeeny, G.},
+  doi       = {10.1093/acprof:oso/9780199797202.001.0001},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @InProceedings{Meehan1977,
@@ -26121,6 +26372,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.05},
 }
 
+@InCollection{Mitchell2016b,
+  author    = {Mitchell, R.},
+  title     = {Population Aesthetics in Romantic and Post-Romantic Literature},
+  booktitle = {Constellations of a Contemporary Romanticism},
+  publisher = {Fordham University Press},
+  year      = {2016},
+  pages     = {267-289},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://www.degruyter.com/document/doi/10.1515/9780823271061-013/html},
+}
+
 @TechReport{Mitkov1999,
   author      = {Mitkov, R.},
   title       = {Anaphora resolution: the state of the art},
@@ -26168,6 +26431,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/vlt.2006.0032},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InCollection{Mittell2009,
+  author    = {Mittell, J.},
+  title     = {All in the Game: The Wire, Serial Storytelling, and Procedural Logic},
+  booktitle = {Third Person: Authoring and Exploring Vast Narratives},
+  publisher = {MIT Press},
+  year      = {2009},
+  pages     = {429-438},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://sites.middlebury.edu/thewire09/files/2009/02/wire-game-article.pdf},
 }
 
 @Book{Mittell2015,
@@ -26514,6 +26789,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.31},
   url       = {https://books.google.fr/books/about/The_Way_of_the_World.html?id=OmVO7oTxttgC&redir_esc=y},
+}
+
+@Book{Moretti1996,
+  title     = {Modern Epic: The World-System from Goethe to García Márquez},
+  publisher = {Verso},
+  year      = {1996},
+  author    = {Moretti, F.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Modern_Epic.html?id=HFzgy0Auf4UC},
 }
 
 @Book{Moretti1999,
@@ -27132,6 +27417,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.iaiai.org/journals/index.php/IJSKM/article/view/468},
 }
 
+@Article{Murphet2010,
+  author    = {Murphet, J.},
+  title     = {`The Wire' and Realism},
+  journal   = {Sydney Studies in English},
+  year      = {2010},
+  volume    = {36},
+  pages     = {52-76},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://openjournals.library.sydney.edu.au/index.php/SSE/article/view/4742},
+}
+
 @InProceedings{Murr2017,
   author    = {Murr, S. and Barth, F.},
   title     = {Digital Analysis of the Literary Reception of J. W. v. Goethe's 'Die Leiden des jungen Werthers'},
@@ -27609,6 +27906,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2016.01.06},
   url       = {https://books.google.fr/books?id=YO4EAAAAMAAJ},
+}
+
+@Book{Newlin1995,
+  title     = {Everyone in Dickens},
+  publisher = {Greenwood},
+  year      = {1995},
+  author    = {Newlin, G.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Everyone_in_Dickens_Characteristics_and.html?id=9QP0nQEACAAJ},
 }
 
 @Article{Newman1987,
@@ -30212,6 +30519,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.12.18},
 }
 
+@Article{Plotz2014,
+  author    = {Plotz, J.},
+  title     = {Serial Pleasures: The Influence of Television on the Victorian Novel},
+  journal   = {Articles},
+  year      = {2014},
+  number    = {63},
+  doi       = {10.7202/1025619ar},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+}
+
 @Book{Plutchik2013,
   title     = {Theories of Emotion},
   publisher = {Academic Press},
@@ -31349,7 +31667,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Redner2005,
   author    = {Redner, S.},
-  title     = {Citation Statistics from 110 Years {ofPhysical} Review},
+  title     = {Citation Statistics from 110 Years of Physical Review},
   journal   = {Physics Today},
   year      = {2005},
   volume    = {58},
@@ -33071,6 +33389,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-02946-2},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Saint-Amour2018,
+  author    = {Saint-Amour, P.},
+  title     = {Weak Theory, Weak Modernism},
+  journal   = {Modernism/modernity},
+  year      = {2018},
+  volume    = {25},
+  number    = {3},
+  pages     = {437-459},
+  doi       = {10.1353/mod.2018.0035},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @InCollection{Sainte-Beuve1910,
@@ -35588,6 +35919,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Book{Steinlight2018,
+  title     = {Populating the Novel},
+  publisher = {Cornell University Press},
+  year      = {2018},
+  author    = {Steinlight, E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://muse.jhu.edu/book/57729},
+}
+
 @Article{Stella2018,
   author    = {Stella, M. and Beckage, N. M. and Brede, M. and De Domenico, M.},
   title     = {Multiplex model of mental lexicon reveals explosive learning in humans},
@@ -37549,6 +37890,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.10.25},
 }
 
+@Book{Tratner1995,
+  title     = {Modernism and Mass Politics: Joyce, Woolf, Eliot, Yeats},
+  publisher = {Stanford University Press},
+  year      = {1995},
+  author    = {Tratner, M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://books.google.fr/books/about/Modernism_and_Mass_Politics.html?id=tijmJ4TqTcYC},
+}
+
 @Article{Traud2011,
   author    = {Traud, A. L. and Mucha, P. J. and Porter, M. A.},
   title     = {Social Structure of Facebook Networks},
@@ -38325,6 +38676,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@Book{Vermeule2010,
+  title     = {Why Do We Care about Literary Characters?},
+  publisher = {Johns Hopkins University Press},
+  year      = {2010},
+  author    = {Vermeule, B.},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://jhupbooks.press.jhu.edu/title/why-do-we-care-about-literary-characters},
+}
+
 @Book{Viala2008,
   title     = {La France galante: essai historique sur une catégorie culturelle, de ses origines jusqu’à la Révolution},
   publisher = {Presses Universitaires de France},
@@ -38783,6 +39144,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://searchworks.stanford.edu/view/3933237},
+}
+
+@Article{Walkowitz2019,
+  author    = {Walkowitz, R.},
+  title     = {What Is the Scale of the Literary Object?},
+  journal   = {Modernism/modernity Print Plus},
+  year      = {2019},
+  volume    = {3},
+  number    = {4},
+  doi       = {10.26597/mod.0085},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
 }
 
 @PhdThesis{Wallace2011,
@@ -39836,6 +40209,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1098/rsbl.2006.0510},
   owner     = {Vincent},
   timestamp = {2019.04.01},
+}
+
+@Article{Williams2014,
+  author    = {Williams, L.},
+  title     = {On ``The Wire''},
+  journal   = {Duke University Press},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2021.09.22},
+  url       = {https://www.dukeupress.edu/on-the-wire},
 }
 
 @InProceedings{Williams2018,
